CHANGES IN VERSION 1.1.4
------------------------
 o add_colorbar function <2015-04-30, Thu>
 
CHANGES IN VERSION 1.1.3
------------------------
 o add space between residue substitution (e.g. K123R / E155D) <2015-04-30, Thu>
 o remove slash line in heatmap legend <2015-04-30, Thu>
 o update vignette to add example of merge_tree <2015-04-29, Wed>
 
CHANGES IN VERSION 1.1.2
------------------------
 o in addition to parsing beast time scale tree in XXX_year[\\.\\d]*, now supports XXX/year[\\.\\d]* <2015-04-29, Wed>
 o add examples folder in inst that contains sample data <2015-04-29, Wed>
 o update gplot, now rowname of heatmap will not be displayed <2015-04-28, Tue>
 o add line break if substitution longer than 50 character <2015-04-28, Tue>
 o upport calculating branch for time scale tree <2015-04-28, Tue>
 o remove parsing tip sequence from mlb and mlc file <2015-04-28, Tue>
 o remove tip.fasfile in read.paml_rst for rstfile already contains tip sequence <2015-04-28, Tue>
 o scale_color accepts user specific interval and output contains 'scale' attribute that can be used for adding legend <2015-04-28, Tue>
 o extend fortify methods to support additional fields <2015-04-28, Tue>
 o extend get.fields methods to support additional fields <2015-04-28, Tue>
 o extend tree class to support additional info by merging two tree <2015-04-28, Tue>
 o implement merge_tree function to merge two tree objects into one <2015-04-28, Tue>
 
CHANGES IN VERSION 1.1.1
------------------------
 o minor bug fixed in extracting node ID of rst file <2015-04-27, Mon>
 o update parsing beast time scale tree to support _year (originally supports _year.\\d+) <2015-04-27, Mon>
 o add Tommy in author <2015-04-27, Mon>
 
CHANGES IN VERSION 0.99.28
------------------------
 o update vignette with floating table of content <2015-04-08, Wed>
 
CHANGES IN VERSION 0.99.27
------------------------
 o bug fixed, see https://github.com/GuangchuangYu/ggtree/issues/4 <2015-03-07, Tue>
